[package]
name = "duchy"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Gio Della-Libera <giodl73@gmail.com>"]
description = "Historical title timeline model for game-design experiments."
default-run = "duchy"

[lib]
name = "duchy"
path = "src/lib.rs"

[[bin]]
name = "duchy"
path = "src/main.rs"

[[bin]]
name = "duchy-import"
path = "src/bin/duchy_import.rs"

[[bin]]
name = "duchy-promote"
path = "src/bin/duchy_promote.rs"
